--- a/css/main.css
+++ b/css/main.css
@@ -227,6 +227,7 @@ a .slideshow-title {
     box-shadow: 0px 0px 8px 0px rgba(34, 60, 80, 0.2);
     overflow: hidden;
     margin: 50px 0 0 0;
+    height: 500px;
 }
 
 .card .product-photo {
