--- a/style/main.css
+++ b/style/main.css
@@ -104,6 +104,7 @@ h6 {
     width: 100%;
     position: absolute;
     z-index: 1;
+    max-width: 200px;
 }
 
 table {
@@ -111,7 +112,7 @@ table {
 }
 
 .modal {
-    display: block;
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
@@ -133,7 +134,7 @@ table {
 .modal-event form {
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: 80%;
     color: var(--black);
 }
 
@@ -141,4 +142,8 @@ table {
     display: flex;
     justify-content: space-between;
     margin: 10px 0;
+}
+
+.span input{
+    border-left: var(--black);
 }
