added autorization and some refactoring

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,11 +9,10 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="shortcut icon" href="./img/icons/mac.ico" type="image/x-icon">
     <title>MacOutlet</title>
 
 <body>
-    <!--  <script src="js/items.js"></script> -->
-    <!--     <script src="./js/backend.js"></script> -->
     <div class="wrapper">
         <div class="container">
             <header>
@@ -23,8 +22,8 @@
                         <div class="cart" id="cart" title="closed">
                             <img src="./img/icons/cart.svg" alt="">
                             <span class="cart">0</span>
-
                         </div>
+                        <i class="fa fa-sign-out" aria-hidden="true" id="out"></i>
                         <section class="modal-cart" id="modal-cart">
                             <h2>Shopping Cart</h2>
                             <div class="container-rows" id="container-rows">
@@ -36,7 +35,7 @@
 
                                 </div>
                                 <div class="total-price" id="total-price">
-                                    Total price: <b>1699$</b>
+                                    Total price: <b>0$</b>
                                 </div>
                             </div>
                             <button class="buy">Buy</button>
