--- a/app/views/login.html
+++ b/app/views/login.html
@@ -14,8 +14,8 @@
         <label for="password">Password</label>
         <input type="password" name="password" id="password" placeholder="Enter your password">
         <div id="msg"></div>
-        <input type="button" id="log" value="Log in">
-        <a href="../">Register</a>
+        <input type="button" class="btn" id="log" value="Log in">
+        <a href="../auth">Register</a>
     </form>
 </body>
 <script src="/js/login.js"></script>
