--- a/app/views/register.html
+++ b/app/views/register.html
@@ -15,8 +15,8 @@
         <input type="email" name="email" id="email" placeholder="Enter your email">
         <label for="password">Password</label>
         <input type="password" name="password" id="password" placeholder="Enter your password">
+        <input type="button" class="btn" id="reg" value="Register">
         <div id="msg"></div>
-        <input type="button" id="reg" value="Register">
         <a href="/auth/login">Log in</a>
     </form>
 </body>
