--- a/app/public/css/login.css
+++ b/app/public/css/login.css
@@ -12,13 +12,35 @@ html,body{
 form{
     margin: auto;
     width: 100%;
-    border: 3px solid blue;
-    padding: 10px;
+    border: 1px solid blue;
+    border-radius: 20px;
+    padding: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-family: 'Roboto',sans-serif;
+}
+
+.btn{
+    width: 100%;
+    height: 50px;
+    border: 1px solid blue;
+    border-radius: 20px;
+    background:blue;
+    font-family: 'Roboto',sans-serif;
+    font-size: 20px;
+    color: white;
+}
+
+input{
+    width: 100%;
+    height: 50px;
+    border: 1px solid blue;
+    border-radius: 20px;
+    font-family: 'Roboto',sans-serif;
+    font-size: 20px;
+    padding: 10px;
 }
 
 #msg{
