--- a/app/public/css/login.css
+++ b/app/public/css/login.css
@@ -22,6 +22,14 @@ form{
     font-family: 'Roboto',sans-serif;
 }
 
+.span{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .btn{
     width: 100%;
     height: 50px;
@@ -31,16 +39,19 @@ form{
     font-family: 'Roboto',sans-serif;
     font-size: 20px;
     color: white;
+    margin-top: 50px;
 }
 
+
 input{
-    width: 100%;
-    height: 50px;
+   max-width: 80%;
+    height: 20px;
     border: 1px solid blue;
     border-radius: 20px;
     font-family: 'Roboto',sans-serif;
     font-size: 20px;
     padding: 10px;
+    margin: 10px 0;
 }
 
 #msg{
