--- a/app/views/index.html
+++ b/app/views/index.html
@@ -18,6 +18,7 @@
             <header>
                 <div class="signin">
                     <div class="logo"><img src="./img/icons/logo.png" alt="logo"></div>
+                    <div id="welcome"></div>
                     <div class="">
                         <div class="cart" id="cart" title="closed">
                             <img src="./img/icons/cart.svg" alt="">
