--- a/app/views/login.html
+++ b/app/views/login.html
@@ -10,12 +10,12 @@
 <body>
     <form action="">
         <div class="span">
-            <label for="email">E-mail</label>
-        <input type="email" name="email" id="email" placeholder="Enter your email">
+            <label id="_email" for="email">E-mail</label>
+        <input class="animated" type="email" name="email" id="email" >
         </div>
         <div class="span">
-            <label for="password">Password</label>
-        <input type="password" name="password" id="password" placeholder="Enter your password">
+            <label id="_password" for="password">Password</label>
+        <input class="animated" type="password" name="password" id="password" >
         </div>
         
         <div id="msg"></div>
