--- a/app/public/css/login.css
+++ b/app/public/css/login.css
@@ -9,9 +9,13 @@ html,body{
     height: 100%;
 }
 
+body{
+    width: 100%;
+}
+
 form{
     margin: auto;
-    width: 100%;
+    width: 40%;
     border: 1px solid blue;
     border-radius: 20px;
     padding: 100px;
@@ -28,6 +32,7 @@ form{
     width: 80%;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .btn{
@@ -52,6 +57,24 @@ input{
     font-size: 20px;
     padding: 10px;
     margin: 10px 0;
+    position: relative;
+}
+
+label{
+    position: absolute;
+    z-index: 2;
+    left: 15px;
+    transition: font-size 0.7s ease-in-out;
+    transition: top 1s ease-in-out;
+    transition: left 1s ease-in-out;
+}
+
+label.filled{
+    position: absolute;
+    top: 0;
+    left: 15px;
+    z-index: 2;
+    font-size: 10px;
 }
 
 #msg{
