--- a/app/views/index.html
+++ b/app/views/index.html
@@ -55,12 +55,10 @@
                         <img class='slide 2' src='img/banners/mac_book_banner.jpg' alt="MacBook">
                         <img class='slide 13' src='img/banners/watch_banner.jpg' alt="AppleWatch">
                     </div>
-                    <div class='text-container'>
-                        <a href="">
-                            <div class='slideshow-title'>
+                    <div class='text-container 33' id="banner">                        
+                            <div class='slideshow-title 33'>
                                 AirPods Max
                             </div>
-                        </a>
                         <button id="adds" class='add-to-cart slideshow 33'>Add to cart</button>
 
                     </div>
@@ -69,15 +67,13 @@
             <main>
                 <div class="container-filter">
                     <div class="search">
-                        <img src="./img/icons/search.svg" alt="search">
+                        <i class="fa fa-search" aria-hidden="true"></i>
                         <input type="search" name="search-product" id="search" placeholder="Enter device name...">
                     </div>
                     <div class="filter inactive" id="filter">
-                        <img src="./img/icons/filter.svg" alt="">
+                        <i class="fa fa-filter" aria-hidden="true"></i>
                     </div>
-                    <div class="sort">
-                        <img src="./img/icons/settings.svg" alt="">
-                    </div>
+                    
                 </div>
                 <div class="container-main" id="container-main">
                     <div class="container-accordeon">
