--- a/app/views/register.html
+++ b/app/views/register.html
@@ -19,7 +19,7 @@
         </div>
         <div class="span">
             <label id="_password" for="password">Password</label>
-        <input type="password" class="animated" name="password" id="password" placeholder="Enter your password">
+        <input type="password" class="animated" name="password" id="password">
         </div>
         <input type="button" class="btn" id="reg" value="Register">
         <div id="msg"></div>
