--- a/app/public/css/main.css
+++ b/app/public/css/main.css
@@ -13,6 +13,11 @@
     --lightblue:#EAF6FF;
 }
 
+:active, :hover, :focus {
+    outline: 0;
+    outline-offset: 0;
+}
+
 body {
     margin: 0;
     font-family: 'Roboto', sans-serif;
@@ -118,6 +123,24 @@ h6 {
     overflow-x: hidden;
 }
 
+#filter.filter{
+    background-color: var(--blue);
+    border-radius: 20px;
+    height: 40px;
+    width: 40px;
+}
+
+.fa-filter{
+    background: none;
+    color: var(--white);
+    padding: 12px 0px 0px 12px;
+}
+
+.fa-search{
+    color: var(--black);
+    margin: 0 5px 0 10px;
+}
+
 .slideshow-container {
     position: absolute;
     width: 100%;
@@ -148,7 +171,7 @@ h6 {
     overflow-x: hidden;
 }
 
-a .slideshow-title {
+.slideshow-title {
     position: relative;
     display: block;
     font-family: "Roboto", sans-serif;
@@ -322,6 +345,7 @@ li {
     display: none;
     min-width: 350px;
     color: var(--darkblue);
+    margin: 50px 0 0 0;
 }
 
 h1.filter-item-inner-heading{
@@ -368,6 +392,13 @@ h1.filter-item-inner-heading{
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
     display: flex;
     text-align: center;
+    align-items: center;
+}
+
+.modal-span{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
 
@@ -448,7 +479,8 @@ h1.filter-item-inner-heading{
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    border: 1px solid var(--darkgrey);
+    border-top: 1px solid var(--darkgrey);
+    border-bottom: 1px solid var(--darkgrey);
     margin: 5px 0;
     padding: 0 20px;
 }
@@ -491,6 +523,11 @@ h1.filter-item-inner-heading{
     border: none;
     border-radius: 5px;
     width: 20px;
+    height: 20px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
 .counter button:disabled{
@@ -534,8 +571,15 @@ h1.filter-item-inner-heading{
 
 
 @media (max-width: 1250px) {
-    .modal-content{
+    .modal-span{
+        display: flex;
         flex-direction: column;
-        padding: 10 10px;
+    }
+}
+
+@media (max-width: 980px) {
+    .modal-content{
+        display: flex;
+        flex-direction: column;
     }
 }
